<resources>
    <string name="app_name">TodoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">標題</string>
    <string name="enter_title">輸入標題</string>
    <string name="content">內容</string>
    <string name="enter_content">輸入內容</string>

    <string name="list">列表</string>
    <string name="personal">個人</string>
    <string name="work">工作</string>
    <string name="setup">安排</string>
    <string name="edit">編輯</string>
    <string name="task">任務名稱</string>
    <string name="mailbox">收件箱</string>
    <string name="nodeadline">無到期日</string>
    <string name="tag">標籤</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="action_add">新增</string>
    <string name="date">日期</string>
    <string name="comment">附註</string>
    <string name="spacable">可空白</string>
    <string name="select_date">選擇日期</string>
</resources>
