<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/textView"
            android:gravity="center"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText"
            android:layout_span="2"
            android:hint="任務名稱"
            android:gravity="center_horizontal"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/tag"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView6"
            android:gravity="center"
            android:layout_weight="0.5" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/spinner"
            android:layout_weight="0.2"
            android:gravity="center"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:gravity="center"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/select_date"
            android:textSize="20sp"
            android:id="@+id/button_select" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/comment"
            android:id="@+id/textView9"
            android:gravity="center"
            android:layout_weight="0.5" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/editText4"
            android:hint="@string/spacable"
            android:gravity="center_horizontal"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:id="@+id/button_cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:textSize="20sp"
            android:id="@+id/button_comp" />
    </LinearLayout>

</LinearLayout>